@@ -8,12 +8,11 @@ package task10;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class Task10 {
     public static void main(String[] args) {
-        ArrayList<Integer> list1 = new ArrayList<>(Arrays.asList(1,2,3,4,5,6,7));
-        ArrayList<Integer> list2 = new ArrayList<>(Arrays.asList(8,9,3,4,5,6,11));
+        ArrayList<Integer> list1 = new ArrayList<>(Arrays.asList(1, 2, 3, 4, 5, 6, 7));
+        ArrayList<Integer> list2 = new ArrayList<>(Arrays.asList(8, 9, 3, 4, 5, 6, 11));
         ArrayList<Integer> list3 = new ArrayList<>();
 
         for(int element: list1) {
@@ -26,7 +25,7 @@ public class Task10 {
 
         List<Integer> list4 = list1.stream()
             .filter(element -> !list2.contains(element))
-            .collect(Collectors.toList());
+            .toList();
 
         System.out.println("list4: " + list4);
     }
